# splatoon3-ghost-drawer

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
docs/: ORANGE_PI_ZERO_2W_SETUP.md  architecture.md  debugging.md
scripts/: debug.sh  deploy.sh  install_remote.sh  setup_gadget.sh
src/: cli.rs  debug.rs  domain.rs  infrastructure.rs  interfaces.rs  lib.rs  main.rs  main.rs.backup
src/application/: use_cases.rs
src/application/use_cases/: cleanup_gadget.rs  cleanup_system.rs  configure_usb_gadget.rs  diagnose_connection.rs  fix_connection.rs  fix_permissions_use_case.rs  paint_artwork.rs  run_application.rs  setup_system.rs  setup_usb_gadget.rs  show_system_info.rs  test_controller.rs
src/domain/: artwork.rs  controller.rs  events.rs  hardware.rs  painting.rs  setup.rs  shared.rs
src/domain/artwork/: entities.rs  repositories.rs  services.rs  value_objects.rs
src/domain/controller/: emulator.rs  entities.rs  errors.rs  repositories.rs  value_objects.rs
src/domain/hardware/: entities.rs  errors.rs  repositories.rs  value_objects.rs
src/domain/painting/: services.rs  value_objects.rs
src/domain/setup/: entities.rs  repositories.rs
src/domain/shared/: events.rs  value_objects.rs
src/infrastructure/: hardware.rs  setup.rs
src/infrastructure/hardware/: board_detector.rs  controller_repository.rs  linux_hid_controller.rs  linux_hid_device.rs  linux_usb_gadget.rs  linux_usb_gadget_manager.rs  mock_controller.rs  systemd_service.rs
src/infrastructure/setup/: linux_board_detector.rs  linux_boot_configurator.rs  linux_systemd_manager.rs
src/interfaces/: web.rs
src/interfaces/web/: artwork_handlers.rs  dto.rs  embedded_assets.rs  error_response.rs  handlers.rs  log_streamer.rs  models.rs  server.rs
web/: index.html
web/css/: style.css
web/js/: app.js  debug.js  image-processor.js
